--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <body>
 
   	<%= render 'shared/header' %>
+    <%= render 'shared/alerts' %>
     <%= yield %>
     <%= render 'shared/footer' %>
 
