--- a/app/assets/stylesheets/portfolio-item.css
+++ b/app/assets/stylesheets/portfolio-item.css
@@ -5,11 +5,13 @@
  */
 
 body {
-    padding-top: 54px;
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-@media (min-width: 992px) {
-    body {
-        padding-top: 56px;
-    }
+.portfolio-item {
+    margin-bottom: 25px;
+}
+
+footer {
+    margin: 50px 0;
 }
