Updates to posts index.html page.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,16 +3,69 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <%= image_tag "profile.png", class: "img-responsive" %>
+                <%= image_tag "jameshs.jpg", class: "img-responsive" %>
                 <div class="intro-text">
-                    <span class="name">Start Bootstrap</span>
+                    <span class="name">James Matthews</span>
                     <hr class="star-light">
-                    <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
-                </div>
+                    <span class="skills">Web Developer - Ops Manager - Leader</span>
+                </div><br />
+                <div>
+                    <p>I believe in doing what you love, and, for me, that’s doing work that provides value and makes a positive impact on the lives of others.</p>
+                </div>                
             </div>
         </div>
     </div>
 </header>
+
+<!-- Work Section -->
+
+<section id="work">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Work</h2>
+                <hr class="star-primary">                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <section class="box style1">
+                    <span class="icon featured fa-comments-o"></span>
+                       <h3>Developer</h3>
+                       <p>My approach with development is to emphasize practical and efficient builds that are stable, scalable, and provide an excellent user experience.<br />My cross-functional knowledge of e-commerce, technology, and operations management gives me a unique advantage in building collaborative, working relationships with people across all functions of business.<br />In addition to development, I also take time to learn and practice UI and UX principles.</p>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section class="box style1">
+                   <span class="icon featured fa-camera-retro"></span>
+                    <h3>Creator</h3>
+                    <p>Here are some of the technologies that I'm creating with:</p>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3 and SASS</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>Ruby</li>
+                        <li>Ruby on Rails</li>
+                        <li>Bootstrap</li>
+                        <li>GitHub</li>                                     
+                        <li>React.JS</li>
+                        <li>Angular.JS</li>
+                    </ul>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-o-up"></span>
+                    <h3>Leader</h3>
+                    <p>With four years of management experience in the supply chain industry, I have led numerous teams through periods of intense growth and high volume. As a manager, I have continuously looked for ways to develop and inspire those around me.<br />I plan to continue this trend in the development sphere as I work toward becoming a leader in my new industry.</p>
+                    <p class="quote"><em>"Do or do not; there is no try."</em><br />-Master Yoda</p>
+                </section>
+            </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Portfolio Grid Section -->
 <section id="portfolio">
@@ -46,16 +99,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-2">
-                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-            </div>
-            <div class="col-lg-4">
-                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <div class="about">
+                <p><style> .about {text-indent: 4em;} </style>I graduated from the University of Tennessee in December of 2013 with a B.S in Business Administration. Upon graduation, I immediately went to work in business operations as an Assistant Supervisor at PVH Corp. Although I didn't see operations as a life-long career, I saw a path to success that I couldn't ignore.</p>
+
+                <p>I spent the next three and half years exploring new, potential career paths for myself while working my way up to being the Warehouse Manager at Ally Commerce (an e-commerce solutions company). After several years of searching, a friend and fellow programmer recommended that I give development a try.</p>
+
+                <p>What initially attracted me to web development and programming was how the work coupled creativity and problem solving to build applications that didn't previously exist. I quickly discovered the supportive community of other developers and programmers on sites like Google and Stack Overflow, and I fell in deep admiration for the field. I knew it was time for me to take a leap into an exciting new career.</p>
+
+                <p>As of September of 2017, I have completed CareerFoundry's Web Development and Career Changer courses. With my new technical skills, creative muscle, and former experiences, I am looking to join a company as a Junior Web Developer.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-outline">
+<!--                 <a href="#" class="btn btn-lg btn-outline">
                     <i class="fa fa-download"></i> Download Theme
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
