--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,43 +5,35 @@
           <div class="row">
             <div class="footer-col col-md-4">
               <h3>Location</h3>
-              <p>3481 Melrose Place
-                <br>Beverly Hills, CA 90210</p>
+              <p>123 U.S.A Way
+                <br>Tampa, FL.</p>
             </div>
             <div class="footer-col col-md-4">
               <h3>Around the Web</h3>
               <ul class="list-inline">
                 <li class="list-inline-item">
                   <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-facebook"></i>
+                    <i class="fa fa-fw fa-linkedin"></i>
                   </a>
-                </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-google-plus"></i>
-                  </a>
-                </li>
+
                 <li class="list-inline-item">
                   <a class="btn-social btn-outline" href="#">
                     <i class="fa fa-fw fa-twitter"></i>
                   </a>
                 </li>
+
                 <li class="list-inline-item">
                   <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-linkedin"></i>
+                    <i class="fa fa-fw fa-github"></i>
                   </a>
                 </li>
-                <li class="list-inline-item">
-                  <a class="btn-social btn-outline" href="#">
-                    <i class="fa fa-fw fa-dribbble"></i>
-                  </a>
-                </li>
+
               </ul>
             </div>
             <div class="footer-col col-md-4">
-              <h3>About Freelancer</h3>
-              <p>Freelance is a free to use, open source Bootstrap theme created by
-                <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+              <h3>About James</h3>
+              <p>For more information, check out my other portfolio at 
+                <a href="http://james-f-matthews-webdev-portfolio.bitballoon.com/" target="_blank">this website</a>.</p>
             </div>
           </div>
         </div>
@@ -50,7 +42,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              Copyright &copy; Your Website 2017
+              Copyright &copy; James Matthews, WebDev 2017
             </div>
           </div>
         </div>
