Updated layouts and views.

--- a/app/assets/stylesheets/freelancer.css
+++ b/app/assets/stylesheets/freelancer.css
@@ -6,6 +6,7 @@
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
+  background-color: #fafafa;
 }
 p {
   font-size: 20px;
@@ -502,4 +503,34 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .modal-backdrop {
   opacity: 0;
   display: none;
+}
+.box {
+  text-align: center;
+  background-color: #fafafa;
+  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.15), 0px 2px 3px 0px rgba(0, 0, 0, 0.1); 
+  padding: 3em 2em 3.5em 2em;
+  min-height: 610px;
+}
+/*.box p {
+  padding-top: 1.2em;
+}*/
+.row {
+  margin-top: 2em;
+}
+a, a:link {
+  text-decoration: none;
+  transition: .7s;
+}
+.portfolio-item {
+  text-align: center;
+  font-family: inherit;
+  font-size: 1.5em;
+  transition: .7s;
+}
+li {
+  font-size: 1.3em;
+  list-style: none;
+}
+.headshot {
+  border-radius: 50%;
 }
