--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <%= image_tag "jameshs.jpg", class: "img-responsive" %>
+                <%= image_tag "jameshs.jpg", class: "img-responsive headshot" %>
                 <div class="intro-text">
                     <span class="name">James Matthews</span>
                     <hr class="star-light">
@@ -30,15 +30,15 @@
         <div class="row">
             <div class="col-md-4">
                 <section class="box style1">
-                    <span class="icon featured fa-comments-o"></span>
-                       <h3>Developer</h3>
+                       <h3><strong>Developer</strong></h3>
+                       <hr>
                        <p>My approach with development is to emphasize practical and efficient builds that are stable, scalable, and provide an excellent user experience.<br />My cross-functional knowledge of e-commerce, technology, and operations management gives me a unique advantage in building collaborative, working relationships with people across all functions of business.<br />In addition to development, I also take time to learn and practice UI and UX principles.</p>
                 </section>
             </div>
             <div class="col-md-4">
                 <section class="box style1">
-                   <span class="icon featured fa-camera-retro"></span>
-                    <h3>Creator</h3>
+                    <h3><strong>Creator</strong></h3>
+                    <hr>
                     <p>Here are some of the technologies that I'm creating with:</p>
                     <ul>
                         <li>HTML5</li>
@@ -56,8 +56,8 @@
             </div>
             <div class="col-md-4">
                 <section class="box style1">
-                    <span class="icon featured fa-thumbs-o-up"></span>
-                    <h3>Leader</h3>
+                    <h3><strong>Leader</strong></h3>
+                    <hr>
                     <p>With four years of management experience in the supply chain industry, I have led numerous teams through periods of intense growth and high volume. As a manager, I have continuously looked for ways to develop and inspire those around me.<br />I plan to continue this trend in the development sphere as I work toward becoming a leader in my new industry.</p>
                     <p class="quote"><em>"Do or do not; there is no try."</em><br />-Master Yoda</p>
                 </section>
