--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,8 @@
         <div class="col-md-4">
             <h3>Project Description</h3>
             <p><%= @post.body %></p>
+            <h3>Link to project</h3>
+            <p><%= @post.link %></p>
         </div>
 
     </div>
